--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
 <!DOCTYPE html>
 <html lang="thai">
+<style type="text/js">
+    .centerPic
+    {
+        text-align: center;
+        display: block;
+}
+</style>
 <head>
 
     <title>This is title!</title>
@@ -10,7 +17,9 @@
     <p>hello โว้ย: <span id = "name"></span></p>
     <p>ลองสุ่มเลข: <span id ="randNum"> </spap></p>
     <p>animation: </p>
-    <div><img id = "pic1" src = "Rotating_earth_(large).gif" style = "width:48px;height:48px;"></div>
+    <div align = "center"><img id = "CakeBday" src = "CakeBday_idle.gif" style = "width:500px;height:500px;"></div>
+    <button onclick = "BOnClicked()">เป่า!</button>
+
     <script src="app.js"></script>
 </body>
 </html>
