--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <p>ลองสุ่มเลข: <span id ="randNum"> </spap></p>
     <p>animation: </p>
     <div align = "center"><img id = "CakeBday" src = "CakeBday_idle.gif" style = "width:500px;height:500px;"></div>
-    <button onclick = "BOnClicked()">เป่า!</button>
+    <button onclick = "BOnClicked()">Blow!</button>
 
     <script src="app.js"></script>
 </body>
